<resources>
    <string name="app_name">APP</string>

    <string name="menu_bbs">论坛</string>
    <string name="menu_class">课表</string>
    <string name="menu_mine">我的</string>

    <string name="bt_login">登录</string>
    <string name="et_user_name">请输入用户名</string>
    <string name="et_password">请输入密码</string>
    <string name="app_version">1.0.0 beta</string>
    <string name="iv_app_icon">app_icon</string>
    <string name="tv_content">内容</string>
    <string name="tv_user_id">用户名</string>
    <string name="ib_like">点赞</string>
    <string name="ib_comment">评论</string>
    <string name="ib_collection">收藏</string>
    <string name="tv_like_count">100</string>
    <string name="tv_comment_count">100</string>
    <string name="tv_collection_count">100</string>
    <string name="tv_user_name">徐鑫</string>
    <string name="tv_uid_detail">201930035227</string>
    <string name="tv_uid">UID:</string>
    <string name="tv_focus">关注</string>
    <string name="tv_focus_count">100</string>
    <string name="tv_fans">|  粉丝</string>
    <string name="tv_fans_count">100</string>
    <string name="tv_my_bbs">我的论坛</string>
    <string name="ib_my_discuss">我的讨论</string>
    <string name="ib_my_comment">我的评论</string>
    <string name="ib_my_collection">我的收藏</string>
    <string name="tv_my_discuss">我的讨论</string>
    <string name="tv_my_comment">我的评论</string>
    <string name="tv_my_collection">我的收藏</string>
    <string name="ib_personal_enter">个人中心入口</string>
    <string name="btn_send">评论</string>
    <string name="et_comment_hint">说点什么吧</string>
    <string name="cb_remember_password">记住密码</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="et_hint_student_id">请输入学号</string>
    <string name="et_hint_name">请输入姓名</string>
    <string name="et_hint_password">请输入密码</string>
    <string name="et_hint_college">请输入学院</string>
    <string name="btn_register">注册</string>
    <string name="et_hint_password_ensure">请再次输入密码</string>
    <string name="tv_register">注册账户</string>
    <string name="tv_forget">忘记密码</string>


    <string name="tv_click_login">点击登录</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="et_major">请输入专业</string>

    <dimen name="log_space">7dp</dimen>
</resources>