<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#C0F6F6">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="3dp"
        android:foreground="?selectableItemBackground"
        android:orientation="vertical"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLines="2"
                android:text="@string/tv_content"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline5"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/imageView4"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tvUserId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/tv_user_id"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/imageView4"
                app:layout_constraintVertical_bias="0.00999999" />

            <ImageButton
                android:id="@+id/ibLike"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:background="@color/white"
                android:contentDescription="@string/ib_like"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/guideline5"
                app:srcCompat="@drawable/ic_baseline_thumb_up_24_gray"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/tvLikeCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/ibLike"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/ibLike"
                app:layout_constraintTop_toTopOf="@+id/ibLike"
                tools:text="100" />

            <ImageButton
                android:id="@+id/ibCollection"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@color/white"
                android:contentDescription="@string/ib_collection"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvCommentCount"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/tvCommentCount"
                app:layout_constraintTop_toTopOf="@+id/tvCommentCount"
                app:srcCompat="@drawable/ic_baseline_textsms_24_gray"
                tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/tvCommentCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/ibComment"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/ibComment"
                app:layout_constraintTop_toTopOf="@+id/ibComment"
                tools:text="100" />

            <ImageButton
                android:id="@+id/ibComment"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:background="@color/white"
                android:contentDescription="@string/ib_comment"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvLikeCount"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/tvLikeCount"
                app:layout_constraintTop_toTopOf="@+id/tvLikeCount"
                app:srcCompat="@drawable/ic_baseline_textsms_24_gray"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/tvCollectionCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/ibCollection"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/ibCollection"
                app:layout_constraintTop_toTopOf="@+id/ibCollection"
                tools:text="100" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.15" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.8" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageView4"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@style/circleImageStyle"
                app:srcCompat="@drawable/app_icon" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>